# organize-receipt

./: .env.example  .gitignore  PLAN.md  README.md  app.py  config.py  plan.md  pyproject.toml
.streamlit/: config.toml
app/: auth.py  config.py  sheets_sync.py  streamlit_app.py  supabase_client.py  transactions.py  upload_receipt.py
app/components/: capture_form.py  print_section.py  transactions_table.py
components/: capture_form.py  print_section.py  transactions_table.py
config/: categories.json
g-doc/: .env.example  README.md  app.py  config.py
g-doc/.streamlit/: secrets.toml.example
g-doc/components/: capture_form.py  transactions_table.py
g-doc/services/: auth_service.py  drive_service.py  sheets_service.py
g-doc/tests/: conftest.py  test_config.py
migrations/: 20250308000001_create_transactions_table.sql
scripts/: check_supabase.py  sync_to_sheets.py  test_receipt_grid.py
services/: auth_service.py  drive_service.py  pdf_service.py  sheets_service.py
supabase/: .env.example  README.md  pyproject.toml  requirements.txt
supabase/app/: __init__.py  sheets_sync.py  streamlit_app.py  supabase_client.py  transactions.py  upload_receipt.py
supabase/app/components/: transactions_table.py
supabase/migrations/: 20250308000002_storage_receipts_bucket.sql
supabase/scripts/: check_supabase.py  sync_to_sheets.py
supabase/utils/: pdf_export.py
utils/: __init__.py  date_utils.py  export_receipt.py  export_statement.py  id_utils.py  image_processing.py  image_utils.py  pdf_export.py  receipt_grid.py  receipt_scanner.py  transaction_utils.py
