[project]
name = "organize-receipt"
version = "0.1.0"
description = "Streamlit app for recording and organizing expenses with receipt images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "Pillow>=10.0.0",
    "pypdf>=3.0.0",
]

