[project]
name = "receipt-tracker-supabase"
version = "0.1.0"
description = "Receipt capture and expense tracker with Supabase and optional Google Sheets sync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "supabase>=2.0.0",
    "pandas>=2.0.0",
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
]
